Fix accidental overlaping memory with cluster center and the first element in the array

--- a/houston/src/pages/Report.css
+++ b/houston/src/pages/Report.css
@@ -7,7 +7,11 @@
   gap: 20px;
   padding: 20px;
 }
-
+@media (max-width: 800px) {
+  .reports-main {
+    flex-direction: column; 
+  }
+}
 .reports-col {
   display: flex;
   flex-direction: column;
